first commit - изменения activity_main.xml, strings.xml, MainActivity.java для отображения выбранной песни

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">PlayYourSong</string>
     <string name="select_audio">Выбрать аудио</string>
+    <string name="no_audio_selected">Аудио не выбрано</string>
 </resources>
