--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,8 @@
 <resources>
-    <string name="app_name">PlayYourSong</string>
-    <string name="select_audio">Выбрать аудио</string>
-    <string name="no_audio_selected">Аудио не выбрано</string>
+<string name="app_name">PlayYourSong</string>
+<string name="action_settings">Settings</string>
+<string name="select_audio">Выбрать аудио</string>
+<string name="selected_audio">Выбранное аудио: %1$s</string> <!-- Строка с заполнителем -->
+<string name="audio_not_selected">Аудио не выбрано</string>
+<string name="permission_denied_message">Разрешение на доступ к аудио отклонено</string> <!-- Сообщение о отказе в разрешении -->
 </resources>
